[package]
name = "teeify-enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["pem", "std"] }
aes-gcm = "0.10"
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Boa 0.18 fails to compile on some hosts (e.g. Rust 1.93 aarch64-apple); 0.21 matches our usage (`Context::eval` + `Source::from_bytes`).
boa_engine = "0.21"
url = "2.5.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
webpki-roots = "0.26"
rustls-pki-types = "1"
aws-config = "1.0"
aws-credential-types = "1"
aws-sdk-kms = "1.0"
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-aws-lc"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = "0.5"
libc = "0.2"
nix = "0.23"
serde_bytes = "0.11"
tokio-vsock = "0.3"


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"